# Algorithms-hw1

./: CMakeLists.txt  README.md  cli for pyton tests  cli.cpp  decoder_alg.cpp  decoder_h.h  test_driver.py  tests_ascii85.cpp
.github/workflows/: Cpp.yml  cmakeLists
